--- a/VaccineAlert.ipynb
+++ b/VaccineAlert.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "twelve-declaration",
+   "id": "inner-execution",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fabulous-prospect",
+   "id": "rubber-attitude",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ideal-trance",
+   "id": "powered-bruce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "interim-quilt",
+   "id": "corrected-cross",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecological-coupon",
+   "id": "apparent-seller",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "subject-comedy",
+   "id": "working-cooling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
     "\n",
     "        headers = {'User-Agent': \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.93 Safari/537.36\"}\n",
     "        response = requests.get(url, headers=headers)\n",
-    "        print(response)\n",
+    "#         print(response)\n",
     "        response = response.content.decode()\n",
     "        jsonData = json.loads(response)\n",
     "        jsonData = jsonData['centers']\n",
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abstract-storm",
+   "id": "theoretical-adjustment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
     "\n",
     "            headers = {'User-Agent': \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.93 Safari/537.36\"}\n",
     "            response = requests.get(url, headers=headers)\n",
-    "            print(response)\n",
+    "#             print(response)\n",
     "            response = response.content.decode()\n",
     "            jsonData = json.loads(response)\n",
     "            jsonData = jsonData['centers']\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mineral-campus",
+   "id": "headed-august",
    "metadata": {
     "scrolled": true
    },
@@ -188,12 +188,12 @@
     "    now = datetime.now().time()\n",
     "    entry_list = []\n",
     "    \n",
-    "    if(now > time(20,30) and now < time(23,50)):\n",
-    "        print(\"By Pin\")\n",
+    "    if(now > time(10,00) and now < time(23,00)):\n",
+    "#         print(\"By Pin\")\n",
     "        for pin in pincodes:\n",
-    "            print(pin)\n",
+    "#             print(pin)\n",
     "            checkSlotsByPin(pin)\n",
-    "        print(\"By District\")\n",
+    "#         print(\"By District\")\n",
     "        checkSlotsByDistrict(state,districts)\n",
     "        print(\"loop : \" + str(i) + \" Time : \" + str(now))\n",
     "        i += 1\n",
