--- a/VaccineAlert.ipynb
+++ b/VaccineAlert.ipynb
@@ -12,7 +12,9 @@
     "from datetime import datetime,time\n",
     "import time as sleep\n",
     "import sys\n",
-    "from configparser import ConfigParser\n"
+    "from configparser import ConfigParser\n",
+    "from requests.auth import HTTPBasicAuth\n",
+    "from urllib.parse import quote_plus"
    ]
   },
   {
@@ -40,9 +42,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sendMsg(name,address,vaccine,v_count,age):\n",
-    "    msg = \"ALERT! Slot available!\\nName: \" + str(name) + \"\\nAddress : \" + str(address) + \"\\nVaccine : \" + str(vaccine) + \"\\nAge : \" + str(age) + \"\\nTotal Slots : \" + str(v_count)\n",
+    "def sendMsg(name,address,pin,vaccine,v_count,age):\n",
+    "    msg = \"ALERT! Slot available!\\nName: \" + str(name) + \"\\nAddress : \" + str(address) + \"\\nPincode : \" + str(pin) + \"\\nVaccine : \" + str(vaccine) + \"\\nAge : \" + str(age) + \"+\" + \"\\nTotal Slots : \" + str(v_count)\n",
+    "    msg = format(quote_plus(msg))\n",
     "    send_text = 'https://api.telegram.org/bot' + bot_token + '/sendMessage?chat_id=' + bot_chatID + '&text=' + msg\n",
+    "#     print(send_text)\n",
     "    response = requests.get(send_text)\n",
     "    return response.json()"
    ]
@@ -106,26 +110,32 @@
     "        url = \"https://cdn-api.co-vin.in/api/v2/appointment/sessions/calendarByPin?pincode=\"+str(pincode)+\"&date=\"+str(today)\n",
     "\n",
     "        headers = {'User-Agent': \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.93 Safari/537.36\"}\n",
-    "        response = requests.get(url, headers=headers)\n",
+    "        response = requests.get(url, headers=headers, auth=HTTPBasicAuth('user', 'pass'))\n",
     "#         print(response)\n",
     "        response = response.content.decode()\n",
+    "#         pprint(response)\n",
     "        jsonData = json.loads(response)\n",
     "        jsonData = jsonData['centers']\n",
     "        \n",
     "        for center in jsonData:\n",
     "            centerName = center['name']\n",
     "            address = center['address']\n",
+    "            pin = center['pincode']\n",
     "            for sessions in center['sessions']:\n",
     "                if (today == sessions['date']):\n",
     "                    if(sessions['available_capacity'] > 0):\n",
     "                        if center['center_id'] in entry_list:\n",
-    "                            print('center already alerted')\n",
+    "                            pass\n",
+    "#                             print('center already alerted')\n",
+    "#                             print(center['center_id'],centerName,address,sessions['vaccine'],sessions['available_capacity'],sessions['min_age_limit'])\n",
     "                        else:\n",
+    "                            print(\"Slot Available!\")\n",
     "                            entry_list.append(center['center_id'])\n",
-    "                            sendMsg(centerName,address,sessions['vaccine'],sessions['available_capacity'],sessions['min_age_limit'])\n",
-    "                            print(centerName,address,sessions['vaccine'],sessions['available_capacity'],sessions['min_age_limit'])\n",
+    "                            sendMsg(centerName,address,pin,sessions['vaccine'],sessions['available_capacity'],sessions['min_age_limit'])\n",
+    "                            print(center['center_id'],centerName,address,sessions['vaccine'],sessions['available_capacity'],sessions['min_age_limit'])\n",
     "    except:\n",
-    "        print(sys.exc_info())"
+    "        pass\n",
+    "#         print(sys.exc_info())"
    ]
   },
   {
@@ -152,18 +162,23 @@
     "            for center in jsonData:\n",
     "                centerName = center['name']\n",
     "                address = center['address']\n",
+    "                pin = center['pincode']\n",
     "                for sessions in center['sessions']:\n",
     "                    if (today == sessions['date']):\n",
     "                        if(sessions['available_capacity'] > 0):\n",
     "                            if center['center_id'] in entry_list:\n",
-    "                                print('center already alerted')\n",
+    "                                pass\n",
+    "#                                 print('center already alerted')\n",
+    "#                                 print(center['center_id'],centerName,address,sessions['vaccine'],sessions['available_capacity'],sessions['min_age_limit'])\n",
     "                            else:\n",
+    "                                print(\"Slot Available!\")\n",
     "                                entry_list.append(center['center_id'])\n",
-    "                                sendMsg(centerName,address,sessions['vaccine'],sessions['available_capacity'],sessions['min_age_limit'])\n",
-    "                                print(centerName,address,sessions['vaccine'],sessions['available_capacity'],sessions['min_age_limit'])\n",
+    "                                sendMsg(centerName,address,pin,sessions['vaccine'],sessions['available_capacity'],sessions['min_age_limit'])\n",
+    "                                print(center['center_id'],centerName,address,sessions['vaccine'],sessions['available_capacity'],sessions['min_age_limit'])\n",
     "#             print(\"loop\")\n",
     "        except:\n",
-    "            print(sys.exc_info())"
+    "            pass\n",
+    "#             print(sys.exc_info())"
    ]
   },
   {
@@ -176,9 +191,9 @@
    "source": [
     "done = False\n",
     "i = 1\n",
+    "entry_list = []\n",
     "while not done:\n",
     "    now = datetime.now().time()\n",
-    "    entry_list = []\n",
     "    \n",
     "    if(now > time(7,00) and now < time(23,00)):\n",
     "#         print(\"By Pin\")\n",
@@ -187,10 +202,13 @@
     "            checkSlotsByPin(pin)\n",
     "#         print(\"By District\")\n",
     "        checkSlotsByDistrict(state,districts)\n",
-    "        print(\"loop : \" + str(i) + \" Time : \" + str(now))\n",
+    "#         print(\"loop : \" + str(i) + \" Time : \" + str(now))\n",
     "        i += 1\n",
     "        print(entry_list)\n",
     "        sleep.sleep(5)\n",
+    "        if(i%120 == 0):\n",
+    "            print(\"list cleared\")\n",
+    "            entry_list = []\n",
     "    else:\n",
     "        done = True"
    ]
