--- a/VaccineAlert.ipynb
+++ b/VaccineAlert.ipynb
@@ -28,12 +28,26 @@
     "\n",
     "# Telegram setup\n",
     "bot_token = configur.get('telegram', 'bot_token')\n",
-    "bot_chatID = configur.get('telegram', 'bot_chatID')\n",
+    "\n",
+    "# Telegram setup Pune\n",
+    "# Pune District\n",
+    "chatIdPuneDistrict = configur.get('telegram', 'PuneDistrict')\n",
+    "# Pune City\n",
+    "chatIdPuneCity = configur.get('telegram', 'PuneCity')\n",
+    "\n",
+    "# Telegram setup Nashik Group\n",
+    "# Nashik District\n",
+    "chatIdNskDistrict = configur.get('telegram', 'NashikDistrict')\n",
+    "# Nashik City\n",
+    "chatIdNskCity = configur.get('telegram', 'NashikCity')\n",
     "\n",
     "#District data\n",
     "state = configur.get('data', 'state')\n",
     "districts = json.loads(configur.get('data', 'districts'))\n",
-    "pincodes = json.loads(configur.get('data', 'pincodes'))\n"
+    "pincodeNashik = json.loads(configur.get('data', 'pincodeNashik'))\n",
+    "pincodePune = json.loads(configur.get('data', 'pincodePune'))\n",
+    "pincodes = [pincodeNashik] + [pincodePune]\n",
+    "pinCity = json.loads(configur.get('data', 'pinCity'))"
    ]
   },
   {
@@ -42,8 +56,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sendMsg(name,address,pin,vaccine,v_count,age):\n",
-    "    msg = \"ALERT! Slot available!\\nName: \" + str(name) + \"\\nAddress : \" + str(address) + \"\\nPincode : \" + str(pin) + \"\\nVaccine : \" + str(vaccine) + \"\\nAge : \" + str(age) + \"+\" + \"\\nTotal Slots : \" + str(v_count)\n",
+    "def sendMsg(place,name,address,pin,vaccine,v_count,age,fee):\n",
+    "    if(place == 389): #NashikDistrictCode\n",
+    "        bot_chatID = chatIdNskDistrict\n",
+    "    elif(place.upper() == \"NashikCity\".upper()):\n",
+    "        bot_chatID = chatIdNskCity\n",
+    "    elif(place == 363): #PuneDistrictCode\n",
+    "        bot_chatID = chatIdPuneDistrict\n",
+    "    elif(place.upper() == \"PuneCity\".upper()):\n",
+    "        bot_chatID = chatIdPuneCity\n",
+    "\n",
+    "    msg = \"ALERT! Slot available!\\nName: \" + str(name) + \"\\nAddress : \" + str(address) + \"\\nPincode : \" + str(pin) + \"\\nVaccine : \" + str(vaccine) + \" : \" + str(fee) + \"\\nAge : \" + str(age) + \"+\" + \"\\nTotal Slots : \" + str(v_count)\n",
     "    msg = format(quote_plus(msg))\n",
     "    send_text = 'https://api.telegram.org/bot' + bot_token + '/sendMessage?chat_id=' + bot_chatID + '&text=' + msg\n",
     "#     print(send_text)\n",
@@ -104,38 +127,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def checkSlotsByPin(pincode):\n",
-    "    try:\n",
-    "        today = datetime.now().date().strftime('%d-%m-%Y');\n",
-    "        url = \"https://cdn-api.co-vin.in/api/v2/appointment/sessions/calendarByPin?pincode=\"+str(pincode)+\"&date=\"+str(today)\n",
+    "def checkSlotsByPin(pincodes):\n",
+    "    i = 0\n",
+    "    for pincode in pincodes:\n",
+    "        for pin in pincode:\n",
+    "            try:\n",
+    "                today = datetime.now().date().strftime('%d-%m-%Y');\n",
+    "                url = \"https://cdn-api.co-vin.in/api/v2/appointment/sessions/calendarByPin?pincode=\"+str(pin)+\"&date=\"+str(today)\n",
     "\n",
-    "        headers = {'User-Agent': \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.93 Safari/537.36\"}\n",
-    "        response = requests.get(url, headers=headers, auth=HTTPBasicAuth('user', 'pass'))\n",
-    "#         print(response)\n",
-    "        response = response.content.decode()\n",
-    "#         pprint(response)\n",
-    "        jsonData = json.loads(response)\n",
-    "        jsonData = jsonData['centers']\n",
-    "        \n",
-    "        for center in jsonData:\n",
-    "            centerName = center['name']\n",
-    "            address = center['address']\n",
-    "            pin = center['pincode']\n",
-    "            for sessions in center['sessions']:\n",
-    "                if (today == sessions['date']):\n",
-    "                    if(sessions['available_capacity'] > 0):\n",
-    "                        if center['center_id'] in entry_list:\n",
-    "                            pass\n",
-    "#                             print('center already alerted')\n",
-    "#                             print(center['center_id'],centerName,address,sessions['vaccine'],sessions['available_capacity'],sessions['min_age_limit'])\n",
-    "                        else:\n",
-    "                            print(\"Slot Available!\")\n",
-    "                            entry_list.append(center['center_id'])\n",
-    "                            sendMsg(centerName,address,pin,sessions['vaccine'],sessions['available_capacity'],sessions['min_age_limit'])\n",
-    "                            print(center['center_id'],centerName,address,sessions['vaccine'],sessions['available_capacity'],sessions['min_age_limit'])\n",
-    "    except:\n",
-    "        pass\n",
-    "#         print(sys.exc_info())"
+    "                headers = {'User-Agent': \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.93 Safari/537.36\"}\n",
+    "                response = requests.get(url, headers=headers)\n",
+    "                response = response.content.decode()\n",
+    "\n",
+    "                jsonData = json.loads(response)\n",
+    "                jsonData = jsonData['centers']\n",
+    "\n",
+    "                for center in jsonData:\n",
+    "                    centerName = center['name']\n",
+    "                    address = center['address']\n",
+    "                    pin = center['pincode']\n",
+    "                    fee = center['fee_type']\n",
+    "                    for sessions in center['sessions']:\n",
+    "                        if (today == sessions['date']):\n",
+    "                            if(sessions['available_capacity'] > 0):\n",
+    "                                if center['center_id'] in entry_list:\n",
+    "                                    pass\n",
+    "                                else:\n",
+    "                                    print(\"Slot Available!\")\n",
+    "                                    entry_list.append(center['center_id'])\n",
+    "                                    sendMsg(pinCity[i],centerName,address,pin,sessions['vaccine'],sessions['available_capacity'],sessions['min_age_limit'],fee)\n",
+    "                                    print(center['center_id'],centerName,address,sessions['vaccine'],sessions['available_capacity'],sessions['min_age_limit'],fee)\n",
+    "            except:\n",
+    "                pass\n",
+    "        i += 1"
    ]
   },
   {
@@ -153,32 +177,28 @@
     "\n",
     "            headers = {'User-Agent': \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.93 Safari/537.36\"}\n",
     "            response = requests.get(url, headers=headers)\n",
-    "#             print(response)\n",
+    "\n",
     "            response = response.content.decode()\n",
     "            jsonData = json.loads(response)\n",
     "            jsonData = jsonData['centers']\n",
     "\n",
-    "#             pprint(jsonData)\n",
     "            for center in jsonData:\n",
     "                centerName = center['name']\n",
     "                address = center['address']\n",
     "                pin = center['pincode']\n",
+    "                fee = center['fee_type']\n",
     "                for sessions in center['sessions']:\n",
     "                    if (today == sessions['date']):\n",
     "                        if(sessions['available_capacity'] > 0):\n",
     "                            if center['center_id'] in entry_list:\n",
     "                                pass\n",
-    "#                                 print('center already alerted')\n",
-    "#                                 print(center['center_id'],centerName,address,sessions['vaccine'],sessions['available_capacity'],sessions['min_age_limit'])\n",
     "                            else:\n",
     "                                print(\"Slot Available!\")\n",
     "                                entry_list.append(center['center_id'])\n",
-    "                                sendMsg(centerName,address,pin,sessions['vaccine'],sessions['available_capacity'],sessions['min_age_limit'])\n",
-    "                                print(center['center_id'],centerName,address,sessions['vaccine'],sessions['available_capacity'],sessions['min_age_limit'])\n",
-    "#             print(\"loop\")\n",
+    "                                sendMsg(d_id,centerName,address,pin,sessions['vaccine'],sessions['available_capacity'],sessions['min_age_limit'],fee)\n",
+    "                                print(center['center_id'],centerName,address,sessions['vaccine'],sessions['available_capacity'],sessions['min_age_limit'],fee)\n",
     "        except:\n",
-    "            pass\n",
-    "#             print(sys.exc_info())"
+    "            pass"
    ]
   },
   {
@@ -196,22 +216,30 @@
     "    now = datetime.now().time()\n",
     "    \n",
     "    if(now > time(7,00) and now < time(23,00)):\n",
-    "#         print(\"By Pin\")\n",
-    "        for pin in pincodes:\n",
-    "#             print(pin)\n",
-    "            checkSlotsByPin(pin)\n",
-    "#         print(\"By District\")\n",
+    "        \n",
+    "        #By District\n",
     "        checkSlotsByDistrict(state,districts)\n",
-    "#         print(\"loop : \" + str(i) + \" Time : \" + str(now))\n",
+    "    \n",
+    "        #By Pin\n",
+    "        checkSlotsByPin(pincodes)\n",
+    "        \n",
+    "        print(\"loop : \" + str(i) + \" Time : \" + str(now))\n",
     "        i += 1\n",
-    "        print(entry_list)\n",
+    "#         print(entry_list)\n",
     "        sleep.sleep(5)\n",
     "        if(i%120 == 0):\n",
-    "            print(\"list cleared\")\n",
+    "            #list cleared\n",
     "            entry_list = []\n",
     "    else:\n",
     "        done = True"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
