--- a/VaccineAlert.ipynb
+++ b/VaccineAlert.ipynb
@@ -154,9 +154,9 @@
     "                                    pass\n",
     "                                else:\n",
     "                                    print(\"Slot Available!\")\n",
+    "                                    print(center['center_id'],centerName,address,sessions['vaccine'],sessions['available_capacity'],sessions['min_age_limit'],fee)\n",
     "                                    entry_list.append(center['center_id'])\n",
     "                                    sendMsg(pinCity[i],centerName,address,pin,sessions['vaccine'],sessions['available_capacity'],sessions['min_age_limit'],fee)\n",
-    "                                    print(center['center_id'],centerName,address,sessions['vaccine'],sessions['available_capacity'],sessions['min_age_limit'],fee)\n",
     "            except:\n",
     "                pass\n",
     "        i += 1"
@@ -194,9 +194,9 @@
     "                                pass\n",
     "                            else:\n",
     "                                print(\"Slot Available!\")\n",
+    "                                print(center['center_id'],centerName,address,sessions['vaccine'],sessions['available_capacity'],sessions['min_age_limit'],fee)\n",
     "                                entry_list.append(center['center_id'])\n",
     "                                sendMsg(d_id,centerName,address,pin,sessions['vaccine'],sessions['available_capacity'],sessions['min_age_limit'],fee)\n",
-    "                                print(center['center_id'],centerName,address,sessions['vaccine'],sessions['available_capacity'],sessions['min_age_limit'],fee)\n",
     "        except:\n",
     "            pass"
    ]
@@ -225,7 +225,7 @@
     "        \n",
     "        print(\"loop : \" + str(i) + \" Time : \" + str(now))\n",
     "        i += 1\n",
-    "#         print(entry_list)\n",
+    "        print(entry_list)\n",
     "        sleep.sleep(5)\n",
     "        if(i%120 == 0):\n",
     "            #list cleared\n",
