--- a/VaccineAlert.ipynb
+++ b/VaccineAlert.ipynb
@@ -32,22 +32,16 @@
     "# Telegram setup Pune\n",
     "# Pune District\n",
     "chatIdPuneDistrict = configur.get('telegram', 'PuneDistrict')\n",
-    "# Pune City\n",
-    "chatIdPuneCity = configur.get('telegram', 'PuneCity')\n",
     "\n",
     "# Telegram setup Nashik Group\n",
     "# Nashik District\n",
     "chatIdNskDistrict = configur.get('telegram', 'NashikDistrict')\n",
-    "# Nashik City\n",
-    "chatIdNskCity = configur.get('telegram', 'NashikCity')\n",
     "\n",
     "#District data\n",
     "state = configur.get('data', 'state')\n",
     "districts = json.loads(configur.get('data', 'districts'))\n",
-    "pincodeNashik = json.loads(configur.get('data', 'pincodeNashik'))\n",
-    "pincodePune = json.loads(configur.get('data', 'pincodePune'))\n",
-    "pincodes = [pincodeNashik] + [pincodePune]\n",
-    "pinCity = json.loads(configur.get('data', 'pinCity'))"
+    "global hitCount\n",
+    "hitCount = 0"
    ]
   },
   {
@@ -59,12 +53,8 @@
     "def sendMsg(place,name,address,pin,vaccine,v_count,age,fee):\n",
     "    if(place == 389): #NashikDistrictCode\n",
     "        bot_chatID = chatIdNskDistrict\n",
-    "    elif(place.upper() == \"NashikCity\".upper()):\n",
-    "        bot_chatID = chatIdNskCity\n",
     "    elif(place == 363): #PuneDistrictCode\n",
     "        bot_chatID = chatIdPuneDistrict\n",
-    "    elif(place.upper() == \"PuneCity\".upper()):\n",
-    "        bot_chatID = chatIdPuneCity\n",
     "\n",
     "    msg = \"ALERT! Slot available!\\nName: \" + str(name) + \"\\nAddress : \" + str(address) + \"\\nPincode : \" + str(pin) + \"\\nVaccine : \" + str(vaccine) + \" : \" + str(fee) + \"\\nAge : \" + str(age) + \"+\" + \"\\nTotal Slots : \" + str(v_count)\n",
     "    msg = format(quote_plus(msg))\n",
@@ -81,13 +71,17 @@
    "outputs": [],
    "source": [
     "def getStateId(name):\n",
+    "    global hitCount\n",
     "    s_id = 21\n",
     "    try:\n",
     "        url = \"https://cdn-api.co-vin.in/api/v2/admin/location/states\"\n",
     "        headers = {'User-Agent': \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.93 Safari/537.36\"}\n",
     "        response = requests.get(url, headers=headers)\n",
+    "#         print(response)\n",
+    "        hitCount += 1\n",
     "        response = response.content.decode()\n",
     "        jsonData = json.loads(response)\n",
+    "#         print(jsonData)\n",
     "        for state in jsonData['states']:\n",
     "            if (state['state_name'].upper() == name.upper()):\n",
     "                s_id = state['state_id']\n",
@@ -103,6 +97,7 @@
    "outputs": [],
    "source": [
     "def getDistrictId(s_name,d_name):\n",
+    "    global hitCount\n",
     "    s_id = getStateId(s_name);\n",
     "    d_id = [];\n",
     "    \n",
@@ -110,6 +105,7 @@
     "        url = \"https://cdn-api.co-vin.in/api/v2/admin/location/districts/\"+str(s_id)\n",
     "        headers = {'User-Agent': \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.93 Safari/537.36\"}\n",
     "        response = requests.get(url, headers=headers)\n",
+    "        hitCount += 1\n",
     "        response = response.content.decode()\n",
     "        jsonData = json.loads(response)\n",
     "        for d in d_name:\n",
@@ -127,57 +123,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def checkSlotsByPin(pincodes):\n",
-    "    i = 0\n",
-    "    for pincode in pincodes:\n",
-    "        for pin in pincode:\n",
-    "            try:\n",
-    "                today = datetime.now().date().strftime('%d-%m-%Y');\n",
-    "                url = \"https://cdn-api.co-vin.in/api/v2/appointment/sessions/calendarByPin?pincode=\"+str(pin)+\"&date=\"+str(today)\n",
-    "\n",
-    "                headers = {'User-Agent': \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.93 Safari/537.36\"}\n",
-    "                response = requests.get(url, headers=headers)\n",
-    "                response = response.content.decode()\n",
-    "\n",
-    "                jsonData = json.loads(response)\n",
-    "                jsonData = jsonData['centers']\n",
-    "\n",
-    "                for center in jsonData:\n",
-    "                    centerName = center['name']\n",
-    "                    address = center['address']\n",
-    "                    pin = center['pincode']\n",
-    "                    fee = center['fee_type']\n",
-    "                    for sessions in center['sessions']:\n",
-    "                        if (today == sessions['date']):\n",
-    "                            if(sessions['available_capacity'] > 0):\n",
-    "                                if center['center_id'] in entry_list:\n",
-    "                                    pass\n",
-    "                                else:\n",
-    "                                    print(\"Slot Available!\")\n",
-    "                                    print(center['center_id'],centerName,address,sessions['vaccine'],sessions['available_capacity'],sessions['min_age_limit'],fee)\n",
-    "                                    entry_list.append(center['center_id'])\n",
-    "                                    sendMsg(pinCity[i],centerName,address,pin,sessions['vaccine'],sessions['available_capacity'],sessions['min_age_limit'],fee)\n",
-    "            except:\n",
-    "                pass\n",
-    "        i += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def checkSlotsByDistrict(s_name, d_name):\n",
+    "    global hitCount\n",
     "    ids = getDistrictId(s_name, d_name)\n",
     "    for d_id in ids: \n",
+    "        sleep.sleep(1)\n",
     "        try:\n",
     "            today = datetime.now().date().strftime('%d-%m-%Y');\n",
     "            url = \"https://cdn-api.co-vin.in/api/v2/appointment/sessions/calendarByDistrict?district_id=\"+str(d_id)+\"&date=\"+str(today)\n",
     "\n",
     "            headers = {'User-Agent': \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.93 Safari/537.36\"}\n",
     "            response = requests.get(url, headers=headers)\n",
-    "\n",
+    "            hitCount += 1\n",
     "            response = response.content.decode()\n",
     "            jsonData = json.loads(response)\n",
     "            jsonData = jsonData['centers']\n",
@@ -213,6 +170,9 @@
     "i = 1\n",
     "entry_list = []\n",
     "while not done:\n",
+    "    \n",
+    "    hitCount = 0\n",
+    "    print(hitCount)\n",
     "    now = datetime.now().time()\n",
     "    \n",
     "    if(now > time(7,00) and now < time(23,00)):\n",
@@ -220,8 +180,6 @@
     "        #By District\n",
     "        checkSlotsByDistrict(state,districts)\n",
     "    \n",
-    "        #By Pin\n",
-    "        checkSlotsByPin(pincodes)\n",
     "        \n",
     "        print(\"loop : \" + str(i) + \" Time : \" + str(now))\n",
     "        i += 1\n",
@@ -231,7 +189,8 @@
     "            #list cleared\n",
     "            entry_list = []\n",
     "    else:\n",
-    "        done = True"
+    "        done = True\n",
+    "    print(hitCount)"
    ]
   },
   {
