--- a/ByPincode.ipynb
+++ b/ByPincode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,27 +47,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sendMsg(place,name,address,pin,vaccine,v_count,age,fee):\n",
-    "    if(place.upper() == \"NashikCity\".upper()):\n",
-    "        bot_chatID = chatIdNskCity\n",
-    "    elif(place.upper() == \"PuneCity\".upper()):\n",
-    "        bot_chatID = chatIdPuneCity\n",
+    "    try:\n",
+    "        if(place.upper() == \"NashikCity\".upper()):\n",
+    "            bot_chatID = chatIdNskCity\n",
+    "        elif(place.upper() == \"PuneCity\".upper()):\n",
+    "            bot_chatID = chatIdPuneCity\n",
     "\n",
-    "    msg = \"ALERT! Slot available!\\nName: \" + str(name) + \"\\nAddress : \" + str(address) + \"\\nPincode : \" + str(pin) + \"\\nVaccine : \" + str(vaccine) + \" : \" + str(fee) + \"\\nAge : \" + str(age) + \"+\" + \"\\nTotal Slots : \" + str(v_count)\n",
-    "    msg = format(quote_plus(msg))\n",
-    "    send_text = 'https://api.telegram.org/bot' + bot_token + '/sendMessage?chat_id=' + bot_chatID + '&text=' + msg\n",
-    "#     print(send_text)\n",
-    "    response = requests.get(send_text)\n",
-    "    return response.json()"
+    "        msg = \"ALERT! Slot available!\\nName: \" + str(name) + \"\\nAddress : \" + str(address) + \"\\nPincode : \" + str(pin) + \"\\nVaccine : \" + str(vaccine) + \" : \" + str(fee) + \"\\nAge : \" + str(age) + \"+\" + \"\\nTotal Slots : \" + str(v_count)\n",
+    "        msg = format(quote_plus(msg))\n",
+    "        send_text = 'https://api.telegram.org/bot' + bot_token + '/sendMessage?chat_id=' + bot_chatID + '&text=' + msg\n",
+    "    #     print(send_text)\n",
+    "        response = requests.get(send_text)\n",
+    "        return response.json()\n",
+    "    except:\n",
+    "#         pass\n",
+    "        print(sys.exc_info())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -125,9 +129,9 @@
      "output_type": "stream",
      "text": [
       "0\n",
-      "<Response [401]>\n",
+      "<Response [200]>\n",
       "0\n",
-      "<Response [401]>\n",
+      "<Response [200]>\n",
       "1\n",
       "<Response [200]>\n",
       "2\n",
@@ -135,9 +139,9 @@
       "3\n",
       "<Response [401]>\n",
       "4\n",
-      "<Response [200]>\n",
-      "5\n",
       "<Response [401]>\n",
+      "5\n",
+      "<Response [200]>\n",
       "6\n",
       "<Response [200]>\n",
       "7\n",
@@ -145,11 +149,11 @@
       "8\n",
       "<Response [401]>\n",
       "9\n",
-      "<Response [401]>\n",
+      "<Response [200]>\n",
       "10\n",
-      "<Response [401]>\n",
+      "<Response [200]>\n",
       "11\n",
-      "<Response [401]>\n",
+      "<Response [200]>\n",
       "12\n",
       "<Response [200]>\n",
       "13\n",
@@ -167,11 +171,197 @@
       "19\n",
       "<Response [401]>\n",
       "20\n",
-      "<Response [200]>\n",
+      "<Response [401]>\n",
       "21\n",
-      "<Response [200]>\n",
+      "<Response [401]>\n",
       "22\n",
       "<Response [401]>\n",
+      "23\n",
+      "<Response [200]>\n",
+      "24\n",
+      "<Response [401]>\n",
+      "25\n",
+      "<Response [200]>\n",
+      "26\n",
+      "<Response [401]>\n",
+      "27\n",
+      "<Response [200]>\n",
+      "28\n",
+      "<Response [401]>\n",
+      "29\n",
+      "<Response [401]>\n",
+      "30\n",
+      "<Response [401]>\n",
+      "31\n",
+      "<Response [401]>\n",
+      "32\n",
+      "<Response [401]>\n",
+      "33\n",
+      "<Response [401]>\n",
+      "34\n",
+      "<Response [401]>\n",
+      "35\n",
+      "<Response [401]>\n",
+      "36\n",
+      "<Response [200]>\n",
+      "37\n",
+      "<Response [200]>\n",
+      "38\n",
+      "<Response [200]>\n",
+      "39\n",
+      "<Response [200]>\n",
+      "40\n",
+      "<Response [200]>\n",
+      "41\n",
+      "<Response [200]>\n",
+      "42\n",
+      "<Response [200]>\n",
+      "43\n",
+      "<Response [200]>\n",
+      "44\n",
+      "<Response [401]>\n",
+      "45\n",
+      "<Response [200]>\n",
+      "46\n",
+      "<Response [200]>\n",
+      "47\n",
+      "<Response [200]>\n",
+      "48\n",
+      "<Response [200]>\n",
+      "49\n",
+      "<Response [200]>\n",
+      "50\n",
+      "<Response [401]>\n",
+      "51\n",
+      "<Response [401]>\n",
+      "52\n",
+      "<Response [200]>\n",
+      "53\n",
+      "<Response [200]>\n",
+      "54\n",
+      "<Response [200]>\n",
+      "55\n",
+      "<Response [200]>\n",
+      "56\n",
+      "<Response [200]>\n",
+      "57\n",
+      "<Response [200]>\n",
+      "58\n",
+      "<Response [401]>\n",
+      "59\n",
+      "<Response [200]>\n",
+      "60\n",
+      "<Response [200]>\n",
+      "61\n",
+      "<Response [200]>\n",
+      "62\n",
+      "<Response [200]>\n",
+      "63\n",
+      "<Response [200]>\n",
+      "64\n",
+      "<Response [200]>\n",
+      "65\n",
+      "<Response [200]>\n",
+      "66\n",
+      "<Response [200]>\n",
+      "67\n",
+      "<Response [200]>\n",
+      "68\n",
+      "<Response [200]>\n",
+      "69\n",
+      "<Response [200]>\n",
+      "70\n",
+      "<Response [200]>\n",
+      "71\n",
+      "<Response [200]>\n",
+      "72\n",
+      "<Response [200]>\n",
+      "73\n",
+      "<Response [401]>\n",
+      "74\n",
+      "<Response [401]>\n",
+      "75\n",
+      "<Response [200]>\n",
+      "76\n",
+      "<Response [200]>\n",
+      "77\n",
+      "<Response [200]>\n",
+      "78\n",
+      "<Response [200]>\n",
+      "79\n",
+      "<Response [200]>\n",
+      "80\n",
+      "<Response [200]>\n",
+      "81\n",
+      "<Response [200]>\n",
+      "82\n",
+      "<Response [200]>\n",
+      "83\n",
+      "<Response [200]>\n",
+      "84\n",
+      "<Response [200]>\n",
+      "85\n",
+      "<Response [200]>\n",
+      "86\n",
+      "<Response [200]>\n",
+      "87\n",
+      "<Response [200]>\n",
+      "88\n",
+      "<Response [200]>\n",
+      "89\n",
+      "<Response [200]>\n",
+      "90\n",
+      "loop : 1 Time : 17:20:38.100380\n",
+      "[]\n",
+      "91\n",
+      "0\n",
+      "<Response [200]>\n",
+      "0\n",
+      "<Response [200]>\n",
+      "1\n",
+      "<Response [200]>\n",
+      "2\n",
+      "<Response [401]>\n",
+      "3\n",
+      "<Response [200]>\n",
+      "4\n",
+      "<Response [401]>\n",
+      "5\n",
+      "<Response [401]>\n",
+      "6\n",
+      "<Response [401]>\n",
+      "7\n",
+      "<Response [200]>\n",
+      "8\n",
+      "<Response [401]>\n",
+      "9\n",
+      "<Response [200]>\n",
+      "10\n",
+      "<Response [200]>\n",
+      "11\n",
+      "<Response [200]>\n",
+      "12\n",
+      "<Response [200]>\n",
+      "13\n",
+      "<Response [401]>\n",
+      "14\n",
+      "<Response [200]>\n",
+      "15\n",
+      "<Response [401]>\n",
+      "16\n",
+      "<Response [401]>\n",
+      "17\n",
+      "<Response [401]>\n",
+      "18\n",
+      "<Response [401]>\n",
+      "19\n",
+      "<Response [200]>\n",
+      "20\n",
+      "<Response [401]>\n",
+      "21\n",
+      "<Response [401]>\n",
+      "22\n",
+      "<Response [200]>\n",
       "23\n",
       "<Response [401]>\n",
       "24\n",
@@ -179,11 +369,11 @@
       "25\n",
       "<Response [200]>\n",
       "26\n",
-      "<Response [401]>\n",
+      "<Response [200]>\n",
       "27\n",
-      "<Response [401]>\n",
+      "<Response [200]>\n",
       "28\n",
-      "<Response [401]>\n",
+      "<Response [200]>\n",
       "29\n",
       "<Response [401]>\n",
       "30\n",
@@ -225,7 +415,7 @@
       "48\n",
       "<Response [200]>\n",
       "49\n",
-      "<Response [401]>\n",
+      "<Response [200]>\n",
       "50\n",
       "<Response [200]>\n",
       "51\n",
@@ -235,9 +425,9 @@
       "53\n",
       "<Response [200]>\n",
       "54\n",
-      "<Response [401]>\n",
-      "55\n",
       "<Response [200]>\n",
+      "55\n",
+      "<Response [401]>\n",
       "56\n",
       "<Response [200]>\n",
       "57\n",
@@ -247,7 +437,7 @@
       "59\n",
       "<Response [200]>\n",
       "60\n",
-      "<Response [200]>\n",
+      "<Response [401]>\n",
       "61\n",
       "<Response [200]>\n",
       "62\n",
@@ -260,81 +450,7 @@
       "<Response [200]>\n",
       "66\n",
       "<Response [200]>\n",
-      "67\n",
-      "<Response [200]>\n",
-      "68\n",
-      "<Response [200]>\n",
-      "69\n",
-      "<Response [200]>\n",
-      "70\n",
-      "<Response [200]>\n",
-      "71\n",
-      "<Response [200]>\n",
-      "72\n",
-      "<Response [200]>\n",
-      "73\n",
-      "<Response [200]>\n",
-      "74\n",
-      "<Response [200]>\n",
-      "75\n",
-      "<Response [200]>\n",
-      "76\n",
-      "<Response [401]>\n",
-      "77\n",
-      "<Response [200]>\n",
-      "78\n",
-      "<Response [200]>\n",
-      "79\n",
-      "<Response [200]>\n",
-      "80\n",
-      "<Response [200]>\n",
-      "81\n",
-      "<Response [200]>\n",
-      "82\n",
-      "<Response [200]>\n",
-      "83\n",
-      "<Response [200]>\n",
-      "84\n",
-      "<Response [200]>\n",
-      "85\n",
-      "<Response [401]>\n",
-      "86\n",
-      "<Response [401]>\n",
-      "87\n",
-      "<Response [401]>\n",
-      "88\n",
-      "<Response [200]>\n",
-      "89\n",
-      "loop : 1 Time : 15:58:17.898256\n",
-      "[]\n",
-      "90\n",
-      "0\n",
-      "<Response [200]>\n",
-      "0\n",
-      "<Response [200]>\n",
-      "1\n",
-      "<Response [200]>\n",
-      "2\n",
-      "<Response [200]>\n",
-      "3\n",
-      "<Response [200]>\n",
-      "4\n",
-      "<Response [401]>\n",
-      "5\n",
-      "<Response [200]>\n",
-      "6\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-8f2148f3044e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m         \u001b[1;31m#By Pin\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m         \u001b[0mcheckSlotsByPin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpincodes\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"loop : \"\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\" Time : \"\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnow\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-6-7b445d291fce>\u001b[0m in \u001b[0;36mcheckSlotsByPin\u001b[1;34m(pincodes)\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mpincode\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mpincodes\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mpin\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mpincode\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m             \u001b[0msleep\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m             \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m                 \u001b[0mtoday\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstrftime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'%d-%m-%Y'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "67\n"
      ]
     }
    ],
