--- a/ByPincode.ipynb
+++ b/ByPincode.ipynb
@@ -10,6 +10,7 @@
     "import json\n",
     "from pprint import pprint\n",
     "from datetime import datetime,time\n",
+    "from datetime import timedelta\n",
     "import time as sleep\n",
     "import sys\n",
     "from configparser import ConfigParser\n",
@@ -81,9 +82,11 @@
     "    i = 0\n",
     "    for pincode in pincodes:\n",
     "        for pin in pincode:\n",
-    "            sleep.sleep(0.5)\n",
     "            try:\n",
-    "                today = datetime.now().date().strftime('%d-%m-%Y');\n",
+    "                print(pin)\n",
+    "                today = datetime.now().date() + timedelta(1)\n",
+    "#                 print(today)\n",
+    "                today = today.strftime('%d-%m-%Y');\n",
     "                url = \"https://cdn-api.co-vin.in/api/v2/appointment/sessions/calendarByPin?pincode=\"+str(pin)+\"&date=\"+str(today)\n",
     "\n",
     "                headers = {'User-Agent': \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.93 Safari/537.36\"}\n",
@@ -109,12 +112,13 @@
     "                                    pass\n",
     "                                else:\n",
     "                                    print(\"Slot Available!\")\n",
-    "                                    print(center['center_id'],centerName,address,sessions['vaccine'],sessions['available_capacity'],sessions['min_age_limit'],fee)\n",
     "                                    entry_list.append(center['center_id'])\n",
-    "                                    print(center['center_id'],centerName,address,sessions['vaccine'],sessions['available_capacity'],sessions['min_age_limit'],fee)\n",
     "                                    sendMsg(pinCity[i],centerName,address,pin,sessions['vaccine'],sessions['available_capacity'],sessions['min_age_limit'],fee)\n",
+    "                            print(center['center_id'],centerName,address,sessions['vaccine'],sessions['available_capacity'],sessions['min_age_limit'],fee)\n",
+    "\n",
     "            except:\n",
     "                pass\n",
+    "            sleep.sleep(0.5)\n",
     "#                 print(sys.exc_info())\n",
     "#         print(i)\n",
     "        i += 1"
