--- a/VaccineAlert.ipynb
+++ b/VaccineAlert.ipynb
@@ -129,7 +129,9 @@
     "    for d_id in ids: \n",
     "        sleep.sleep(1)\n",
     "        try:\n",
-    "            today = datetime.now().date().strftime('%d-%m-%Y');\n",
+    "            today = datetime.now().date() + timedelta(1)\n",
+    "#             print(today)\n",
+    "            today = today.strftime('%d-%m-%Y');\n",
     "            url = \"https://cdn-api.co-vin.in/api/v2/appointment/sessions/calendarByDistrict?district_id=\"+str(d_id)+\"&date=\"+str(today)\n",
     "\n",
     "            headers = {'User-Agent': \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.93 Safari/537.36\"}\n",
